--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -15,10 +15,10 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
   <body>
-    <main role="main">
-      <section class="top">
-        <section class="profile-picture">profile</section>
-      </section>
+    <main>
+      <div class="top">
+        <div class="profile-picture">profile</div>
+      </div>
       <h1>Victor Crest <span>26</span></h1>
       <p>London</p>
       <hr />
