--- a/profile-card-component/index.html
+++ b/profile-card-component/index.html
@@ -17,7 +17,7 @@
   <body>
     <main>
       <div class="top">
-        <div class="profile-picture">profile</div>
+        <div class="profile-picture"></div>
       </div>
       <h1>Victor Crest <span>26</span></h1>
       <p>London</p>
