--- a/expense-chart/index.html
+++ b/expense-chart/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <title>expense chart component</title>
+    <title>Expense Chart</title>
   </head>
   <body>
     <div id="root"></div>
