--- a/faq-component/index.html
+++ b/faq-component/index.html
@@ -7,10 +7,10 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/favicon.svg"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Frontend Mentor | FAQ Accordion Card</title>
+    <title>FAQ Accordion  </title>
   </head>
   <body>
     <main>
