--- a/news-homepage/index.html
+++ b/news-homepage/index.html
@@ -6,8 +6,7 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="32x32"
-      href="./assets/images/favicon-32x32.png"
+      href="./assets/images/favicon.svg"
     />
     <title>Frontend Mentor | News homepage</title>
     <link rel="stylesheet" href="styles/style.css" />
