--- a/product-preview/index.html
+++ b/product-preview/index.html
@@ -9,13 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:wght@500&family=Montserrat&display=swap"
       rel="stylesheet"
     />
-
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" href="./images/favicon.svg" />
     <link rel="stylesheet" href="./styles/styles.css" />
     <title>Frontend Mentor | Product preview card component</title>
   </head>
