--- a/tip-calculator/index.html
+++ b/tip-calculator/index.html
@@ -12,15 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+    <link rel="icon" type="image/png" href="./images/favicon.svg" />
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Frontend Mentor | Tip calculator app</title>
+    <title>Tip Calculator</title>
   </head>
   <body>
     <h1 id="intro">
